manifests/ingress-2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "kubernetescluster-cd34"
    labels:
        app: "kubernetescluster-cd34"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: kubernetes-clusterb91e-kubernetescluster-cd34.88fb7298d07f4358b952.westeurope.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "kubernetescluster-cd34"
                servicePort: 80
